--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="col-lg-1 p-lg-0">
                     <div class="logo"><a href="index.html"><img src="images/logo.png" alt="OkularGood"></a></div>
                 </div>
-                <div class="col-lg-8 p-lg-0">
+                <div class="col-lg-8 p-lg-0 d-none d-lg-block">
                     <div class="page">
                         <ul>
                             <li><a href="shop.html">SHOP</a></li>
@@ -35,11 +35,11 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-2 p-lg-0 text-right">
+                <div class="col-lg-2 p-lg-0 d-none d-lg-block text-right">
                     <div class="logsign"><a href="login.html">LOG IN</a> /  <a href="signup.html">SIGN UP</a></div>
                 </div>
-                <div class="col-lg-1 p-lg-0 text-right">
-                    <div class="cart"><a href="index.html"><img src="images/cart.png" alt="OkularGood"></a></div>
+                <div class="col-lg-1 p-lg-0 d-none d-lg-block text-right">
+                    <div class="cart"><a href="index.html"><img src="images/icon-01.png" alt="OkularGood"></a></div>
                 </div>
             </div>
         </div>
@@ -47,12 +47,13 @@
     <!-- Main -->
     <div id="main-home">
         <!-- Section Header -->
-        <div class="container-fluid pos-rel home-header pl-lg-5p pr-lg-5p fadein">
+        <div class="container-fluid pos-rel home-header pl-lg-5p pr-lg-5p pl-m-0 pr-m-0 fadein">
             <div class="row">
                 <div class="one-carousel owl-theme home-header-slider">
                     <div class="item">
                         <div class="col-lg-12">
-                            <img class="img-fluid" src="images/home-banner.jpg" alt="OkularGood">
+                            <img class="img-fluid d-none d-lg-block" src="images/home-banner.jpg" alt="OkularGood">
+                            <img class="img-fluid d-block d-lg-none" src="images/home-mobile-banner.jpg" alt="OkularGood">
                             <div class="head-title">
                                 <h1>what’s goods?</h1>
                             </div>
@@ -60,7 +61,8 @@
                     </div>
                     <div class="item">
                         <div class="col-lg-12">
-                            <img class="img-fluid" src="images/home-banner.jpg" alt="OkularGood">
+                            <img class="img-fluid d-none d-lg-block" src="images/home-banner.jpg" alt="OkularGood">
+                            <img class="img-fluid d-block d-lg-none" src="images/home-mobile-banner.jpg" alt="OkularGood">
                             <div class="head-title">
                                 <h1>what’s goods?</h1>
                             </div>
@@ -68,7 +70,8 @@
                     </div>
                     <div class="item">
                         <div class="col-lg-12">
-                            <img class="img-fluid" src="images/home-banner.jpg" alt="OkularGood">
+                            <img class="img-fluid d-none d-lg-block" src="images/home-banner.jpg" alt="OkularGood">
+                            <img class="img-fluid d-block d-lg-none" src="images/home-mobile-banner.jpg" alt="OkularGood">
                             <div class="head-title">
                                 <h1>what’s goods?</h1>
                             </div>
@@ -78,7 +81,7 @@
             </div>
         </div>
         <!-- Section Highlight -->
-        <div class="container-fluid pos-rel home-highlight pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-10p">
+        <div class="container-fluid pos-rel home-highlight pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-10p pt-m-50 pb-m-50">
             <div class="row">
                 <div class="col-lg-6 slideanimLeft">
                     <div class="product pos-rel">
@@ -102,7 +105,7 @@
             </div>
         </div>
         <!-- Section Products -->
-        <div class="container-fluid pos-rel home-products pb-lg-10 pl-lg-10p pr-lg-10p">
+        <div class="container-fluid pos-rel home-products d-none d-lg-block pb-lg-10 pl-lg-10p pr-lg-10p">
             <div class="row">
                 <div class="col-lg-4 text-center">
                     <img class="img-fluid slideanim" src="images/product-01.png">
@@ -136,10 +139,10 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid pos-rel home-products2 bg-black pt-lg-60 pb-lg-30 pl-lg-5p pr-lg-5p">
+        <div class="container-fluid pos-rel home-products2 bg-black pt-lg-60 pb-lg-30 pl-lg-5p pr-lg-5p pt-m-30">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <div class="line-white w-lg-100p mb-lg-30"></div>
+                    <div class="line-white d-none d-lg-block w-lg-100p mb-lg-30"></div>
                     <a class="view font-white" href="shop.html">VIEW ALL</a>
                 </div>
             </div>
