--- a/about-us.html
+++ b/about-us.html
@@ -24,10 +24,15 @@
     <nav id="og-nav">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-1 p-lg-0">
+                <div class="col-8 col-lg-1 p-lg-0">
                     <div class="logo"><a href="index.html"><img src="images/logo.png" alt="OkularGood"></a></div>
                 </div>
-                <div class="col-lg-8 p-lg-0">
+                <div class="col-4 p-0 d-block d-lg-none">
+                    <div class="plus">
+                        <a href="">+</a>
+                    </div>
+                </div>
+                <div class="col-lg-8 p-lg-0 d-none d-lg-block">
                     <div class="page">
                         <ul>
                             <li><a href="shop.html">SHOP</a></li>
@@ -35,10 +40,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-2 p-lg-0 text-right">
+                <div class="col-lg-2 p-lg-0 d-none d-lg-block text-right">
                     <div class="logsign"><a href="login.html">LOG IN</a> /  <a href="signup.html">SIGN UP</a></div>
                 </div>
-                <div class="col-lg-1 p-lg-0 text-right">
+                <div class="col-lg-1 p-lg-0 d-none d-lg-block text-right">
                     <div class="cart"><a href="index.html"><img src="images/icon-01.png" alt="OkularGood"></a></div>
                 </div>
             </div>
@@ -47,16 +52,16 @@
     <!-- Main -->
     <div id="main-about">
         <!-- Section Brief -->
-        <div class="container-fluid pos-rel about-brief pt-lg-75 pb-lg-100 pl-lg-5p pr-lg-5p fadein">
+        <div class="container-fluid pos-rel about-brief pt-lg-75 pb-lg-100 pl-lg-5p pr-lg-5p pt-m-15p pb-m-15p pl-m-10p pr-m-10p fadein">
             <div class="row">
-                <div class="col-lg-5 pr-lg-5p animated fadeIn">
+                <div class="col-lg-5 pr-lg-5p mb-m-15p animated fadeIn">
                     <div class="quote head-title pos-rel">
                         <img class="frame-top" src="images/frame-top.png">
                         <img class="frame-bot" src="images/frame-bottom.png">
                         <h1>“Our Goods are representation of our idealism”</h1>
                     </div>
                 </div>
-                <div class="col-lg-7 pl-lg-40 animated fadeIn">
+                <div class="col-lg-7 pl-lg-40 pl-m-15 animated fadeIn">
                     <div class="detail">
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
                         <p>magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p>
@@ -70,26 +75,26 @@
         </div>
         <div class="line-black w-lg-90p ma-lg"></div>
         <!-- Section Contact -->
-        <div class="container-fluid pos-rel home-contact pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-10p">
+        <div class="container-fluid pos-rel home-contact pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-10p pt-m-15p pb-m-15p">
             <div class="row">
                 <div class="col-lg-5 pr-lg-5p slideanim">
-                    <div class="boxv w-lg-85p">
+                    <div class="boxv w-lg-85p w-m-100p">
                         <div class="mb-lg-10">
                             <h2>You’re Special,<br>and We Know It</h2>
                         </div>
-                        <div class="brief mb-lg-40">
+                        <div class="brief mb-lg-40 mb-m-30">
                             <p>be the first to know our latest updates!</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-7 pr-lg-0 text-right slideanimX">
+                <div class="col-lg-7 pr-lg-0 pr-m-15 text-right slideanimX">
                     <form>
                         <div class="container-fluid">
                             <div class="row">
-                                <div class="col-lg-9 pr-lg-0">
+                                <div class="col-lg-9 pr-lg-0 pl-m-15 pr-m-15">
                                     <input type="email" name="email" placeholder="Your Email Here">
                                 </div>
-                                <div class="col-lg-3 pl-lg-25 text-left">
+                                <div class="col-lg-3 pl-lg-25 pl-m-15 pr-m-15 text-left">
                                     <input class="button-def" type="submit" value="OH YEAH">
                                 </div>  
                             </div>
@@ -103,18 +108,21 @@
     <footer id="og-footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-1 p-lg-0">
+                <div class="col-12 col-lg-1 mb-m-20 p-0">
                     <div class="logo"><a href="index.html"><img src="images/logo-white.png" alt="OkularGood"></a></div>
                 </div>
-                <div class="col-lg-8 p-lg-0">
+                <div class="col-12 col-lg-8 mb-m-20 p-0">
                     <div class="copyright font-white">
                         <p>2019 © ALL RIGHTS RESERVED, <span>PRODUCT OF OKULAR</span></p>
                     </div>
                 </div>
-                <div class="col-lg-2 p-lg-0">
+                <div class="col-12 col-lg-2 mb-m-20 p-0">
                     <div class="mail"><a href="mailto:contact@okular.co.id">CONTACT@OKULAR.CO.ID</a></div>
                 </div>
-                <div class="col-lg-1 p-lg-0 text-right">
+                <div class="col-12 d-block d-lg-none mb-m-20 p-0">
+                    <a href="https://www.instagram.com/okulardesign/" target="_blank"><img src="images/icon-04.png" alt="OkularGood"></a>
+                </div>
+                <div class="col-12 col-lg-1 p-0 text-right">
                     <div class="gotop"><a id="gotop"><img src="images/gotop.png" alt="OkularGood"></a></div>
                 </div>
             </div>
