--- a/detail-product.html
+++ b/detail-product.html
@@ -24,10 +24,15 @@
     <nav id="og-nav">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-1 p-lg-0">
+                <div class="col-8 col-lg-1 p-lg-0">
                     <div class="logo"><a href="index.html"><img src="images/logo.png" alt="OkularGood"></a></div>
                 </div>
-                <div class="col-lg-8 p-lg-0">
+                <div class="col-4 p-0 d-block d-lg-none">
+                    <div class="plus">
+                        <a href="">+</a>
+                    </div>
+                </div>
+                <div class="col-lg-8 p-lg-0 d-none d-lg-block">
                     <div class="page">
                         <ul>
                             <li><a href="shop.html">SHOP</a></li>
@@ -35,10 +40,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-2 p-lg-0 text-right">
+                <div class="col-lg-2 p-lg-0 d-none d-lg-block text-right">
                     <div class="logsign"><a href="login.html">LOG IN</a> /  <a href="signup.html">SIGN UP</a></div>
                 </div>
-                <div class="col-lg-1 p-lg-0 text-right">
+                <div class="col-lg-1 p-lg-0 d-none d-lg-block text-right">
                     <div class="cart"><a href="index.html"><img src="images/icon-01.png" alt="OkularGood"></a></div>
                 </div>
             </div>
@@ -47,9 +52,9 @@
     <!-- Main -->
     <div id="main-detail">
         <!-- Section Highlight -->
-        <div class="container-fluid pos-rel detail-highlight pb-lg-100 pl-lg-5p pr-lg-5p fadein">
+        <div class="container-fluid pos-rel detail-highlight pb-lg-100 pl-lg-5p pr-lg-5p pt-m-15p pb-m-15p pl-m-10p pr-m-10p fadein">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 mb-m-15p">
                     <div class="one-carousel-dots owl-theme detail-product-slider">
                         <div class="item">
                             <img class="img-fluid w-lg-100p" src="images/product-01.png" alt="OkularGood">
@@ -71,6 +76,7 @@
                         <div class="price mb-lg-30">
                             <p>RP. 355.999,-</p>
                         </div>
+                        <div class="line d-block d-lg-none mb-m-20"></div>
                         <form>
                             <label>Quantity</label>
                             <div class="w-lg-100p">
@@ -83,7 +89,7 @@
                                 </a>
                             </div>
                             <div class="w-lg-100p float-left">
-                                <input class="button-def mb-lg-30" type="submit" value="ADD TO CART">
+                                <input class="button-def mb-lg-30 mb-m-0" type="submit" value="ADD TO CART">
                             </div>
                         </form>
                     </div>
@@ -91,43 +97,59 @@
             </div>
         </div>
         <!-- Section Other -->
-        <div class="pt-lg-0 pb-lg-100 pl-lg-5p pr-lg-5p">
+        <div class="pt-lg-0 pb-lg-100 pl-lg-5p pr-lg-5p pb-m-0 pl-m-0 pr-m-0">
             <div class="container-fluid pos-rel detail-other">
                 <div class="row">
-                    <div class="col-lg-12 title mb-lg-2p"><p>Other defined goods</p></div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-12 title mb-lg-2p mb-m-10p pr-m-15p">
+                        <p>Other defined goods</p>
+                        <div class="line d-block d-lg-none"></div>
+                    </div>
+                    <div class="col-lg-4 d-none d-lg-block">
                         <a href="detail-product.html"><div class="image2" style="background: url('images/product-highlight-01.jpg');"></div></a>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 d-none d-lg-block">
                         <a href="detail-product.html"><div class="image2" style="background: url('images/product-highlight-02.jpg');"></div></a>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 d-none d-lg-block">
                         <a href="detail-product.html"><div class="image2" style="background: url('images/product-highlight-03.jpg');"></div></a>
+                    </div>
+                    <div class="col-12 d-block d-lg-none">
+                        <div class="post-carousel owl-theme">
+                            <div class="item">
+                                <a href="detail-product.html"><div class="image2" style="background: url('images/product-highlight-01.jpg');"></div></a>
+                            </div>
+                            <div class="item">
+                                <a href="detail-product.html"><div class="image2" style="background: url('images/product-highlight-02.jpg');"></div></a>
+                            </div>
+                            <div class="item">
+                                <a href="detail-product.html"><div class="image2" style="background: url('images/product-highlight-03.jpg');"></div></a>
+                            </div>
+                        </div>                    
                     </div>
                 </div>
             </div>
         </div>
         <!-- Section Contact -->
-        <div class="container-fluid pos-rel home-contact pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-10p">
+        <div class="container-fluid pos-rel home-contact pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-10p pt-m-15p pb-m-15p">
             <div class="row">
                 <div class="col-lg-5 pr-lg-5p slideanim">
-                    <div class="boxv w-lg-85p">
+                    <div class="boxv w-lg-85p w-m-100p">
                         <div class="mb-lg-10">
                             <h2>You’re Special,<br>and We Know It</h2>
                         </div>
-                        <div class="brief mb-lg-40">
+                        <div class="brief mb-lg-40 mb-m-30">
                             <p>be the first to know our latest updates!</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-7 pr-lg-0 text-right slideanimX">
+                <div class="col-lg-7 pr-lg-0 pr-m-15 text-right slideanimX">
                     <form>
                         <div class="container-fluid">
                             <div class="row">
-                                <div class="col-lg-9 pr-lg-0">
+                                <div class="col-lg-9 pr-lg-0 pl-m-15 pr-m-15">
                                     <input type="email" name="email" placeholder="Your Email Here">
                                 </div>
-                                <div class="col-lg-3 pl-lg-25 text-left">
+                                <div class="col-lg-3 pl-lg-25 pl-m-15 pr-m-15 text-left">
                                     <input class="button-def" type="submit" value="OH YEAH">
                                 </div>  
                             </div>
@@ -141,18 +163,21 @@
     <footer id="og-footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-1 p-lg-0">
+                <div class="col-12 col-lg-1 mb-m-20 p-0">
                     <div class="logo"><a href="index.html"><img src="images/logo-white.png" alt="OkularGood"></a></div>
                 </div>
-                <div class="col-lg-8 p-lg-0">
+                <div class="col-12 col-lg-8 mb-m-20 p-0">
                     <div class="copyright font-white">
                         <p>2019 © ALL RIGHTS RESERVED, <span>PRODUCT OF OKULAR</span></p>
                     </div>
                 </div>
-                <div class="col-lg-2 p-lg-0">
+                <div class="col-12 col-lg-2 mb-m-20 p-0">
                     <div class="mail"><a href="mailto:contact@okular.co.id">CONTACT@OKULAR.CO.ID</a></div>
                 </div>
-                <div class="col-lg-1 p-lg-0 text-right">
+                <div class="col-12 d-block d-lg-none mb-m-20 p-0">
+                    <a href="https://www.instagram.com/okulardesign/" target="_blank"><img src="images/icon-04.png" alt="OkularGood"></a>
+                </div>
+                <div class="col-12 col-lg-1 p-0 text-right">
                     <div class="gotop"><a id="gotop"><img src="images/gotop.png" alt="OkularGood"></a></div>
                 </div>
             </div>
