--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
     <nav id="og-nav">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-1 p-lg-0">
+                <div class="col-8 col-lg-1 p-lg-0">
                     <div class="logo"><a href="index.html"><img src="images/logo.png" alt="OkularGood"></a></div>
+                </div>
+                <div class="col-4 p-0 d-block d-lg-none">
+                    <div class="plus">
+                        <a href="">+</a>
+                    </div>
                 </div>
                 <div class="col-lg-8 p-lg-0 d-none d-lg-block">
                     <div class="page">
@@ -81,7 +86,7 @@
             </div>
         </div>
         <!-- Section Highlight -->
-        <div class="container-fluid pos-rel home-highlight pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-10p pt-m-50 pb-m-50">
+        <div class="container-fluid pos-rel home-highlight pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-10p pt-m-15p pb-m-15p">
             <div class="row">
                 <div class="col-lg-6 slideanimLeft">
                     <div class="product pos-rel">
@@ -143,14 +148,15 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="line-white d-none d-lg-block w-lg-100p mb-lg-30"></div>
-                    <a class="view font-white" href="shop.html">VIEW ALL</a>
+                    <a class="view d-none d-lg-block font-white" href="shop.html">VIEW ALL</a>
+                    <a class="view d-block d-lg-none font-white" href="shop.html">VIEW ALL PRODUCTS</a>
                 </div>
             </div>
         </div>
         <!-- Section About Us -->
-        <div class="container-fluid pos-rel home-about pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-0">
+        <div class="container-fluid pos-rel home-about pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-0 pt-m-15p pb-m-15p">
             <div class="row">
-                <div class="col-lg-5 pr-lg-5p slideanim">
+                <div class="col-lg-5 d-none d-lg-block pr-lg-5p slideanim">
                     <div class="boxv w-lg-85p">
                         <div class="head-title mb-lg-30">
                             <h2>Ideas to<br>Reality</h2>
@@ -161,32 +167,43 @@
                         <a href="about-us.html">LEARN MORE ABOUT US</a>
                     </div>
                 </div>
-                <div class="col-lg-7 pr-lg-0 text-right slideanimX">
+                <div class="col-lg-7 pr-lg-0 mb-lg-30 text-right slideanimX">
                     <img class="img-fluid" src="images/home-image-01.png">
+                </div>
+                <div class="col-12 pr-m-15p d-block d-lg-none">
+                    <div class="w-m-100p">
+                        <div class="head-title mb-lg-30">
+                            <h2>Ideas to<br>Reality</h2>
+                        </div>
+                        <div class="brief mb-lg-40">
+                            <p>Creating has been our thing since 2013, but it didn’t stop there, we wanted to create things more than we usually do. for you! So you can use what we called designer’s stuff.</p>
+                        </div>
+                        <a href="about-us.html">LEARN MORE ABOUT US</a>
+                    </div>
                 </div>
             </div>
         </div>
         <!-- Section Contact -->
-        <div class="container-fluid pos-rel home-contact pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-10p">
+        <div class="container-fluid pos-rel home-contact pt-lg-100 pb-lg-100 pl-lg-10p pr-lg-10p pt-m-15p pb-m-15p">
             <div class="row">
                 <div class="col-lg-5 pr-lg-5p slideanim">
-                    <div class="boxv w-lg-85p">
+                    <div class="boxv w-lg-85p w-m-100p">
                         <div class="mb-lg-10">
                             <h2>You’re Special,<br>and We Know It</h2>
                         </div>
-                        <div class="brief mb-lg-40">
+                        <div class="brief mb-lg-40 mb-m-30">
                             <p>be the first to know our latest updates!</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-7 pr-lg-0 text-right slideanimX">
+                <div class="col-lg-7 pr-lg-0 pr-m-15 text-right slideanimX">
                     <form>
                         <div class="container-fluid">
                             <div class="row">
-                                <div class="col-lg-9 pr-lg-0">
+                                <div class="col-lg-9 pr-lg-0 pl-m-15 pr-m-15">
                                     <input type="email" name="email" placeholder="Your Email Here">
                                 </div>
-                                <div class="col-lg-3 pl-lg-25 text-left">
+                                <div class="col-lg-3 pl-lg-25 pl-m-15 pr-m-15 text-left">
                                     <input class="button-def" type="submit" value="OH YEAH">
                                 </div>  
                             </div>
@@ -200,18 +217,21 @@
     <footer id="og-footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-1 p-lg-0">
+                <div class="col-12 col-lg-1 mb-m-20 p-0">
                     <div class="logo"><a href="index.html"><img src="images/logo-white.png" alt="OkularGood"></a></div>
                 </div>
-                <div class="col-lg-8 p-lg-0">
+                <div class="col-12 col-lg-8 mb-m-20 p-0">
                     <div class="copyright font-white">
                         <p>2019 © ALL RIGHTS RESERVED, <span>PRODUCT OF OKULAR</span></p>
                     </div>
                 </div>
-                <div class="col-lg-2 p-lg-0">
+                <div class="col-12 col-lg-2 mb-m-20 p-0">
                     <div class="mail"><a href="mailto:contact@okular.co.id">CONTACT@OKULAR.CO.ID</a></div>
                 </div>
-                <div class="col-lg-1 p-lg-0 text-right">
+                <div class="col-12 d-block d-lg-none mb-m-20 p-0">
+                    <a href="https://www.instagram.com/okulardesign/" target="_blank"><img src="images/icon-04.png" alt="OkularGood"></a>
+                </div>
+                <div class="col-12 col-lg-1 p-0 text-right">
                     <div class="gotop"><a id="gotop"><img src="images/gotop.png" alt="OkularGood"></a></div>
                 </div>
             </div>
