--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <div class="logo"><a href="index.html"><img src="images/logo.png" alt="OkularGood"></a></div>
                 </div>
                 <div class="col-4 p-0 d-block d-lg-none">
-                    <div class="plus">
-                        <a href="">+</a>
+                    <div class="plus bars">
+                        <p>+</p>
                     </div>
                 </div>
                 <div class="col-lg-8 p-lg-0 d-none d-lg-block">
@@ -45,6 +45,14 @@
                 </div>
                 <div class="col-lg-1 p-lg-0 d-none d-lg-block text-right">
                     <div class="cart"><a href="index.html"><img src="images/icon-01.png" alt="OkularGood"></a></div>
+                </div>
+                <div class="sidenav">
+                    <i class="fa fa-times"></i>
+                    <a href="index.html"><img src="images/logo-white.png" alt="OkularGood"></a>
+                    <ul>
+                        <li><a href="shop.html">SHOP</a></li>
+                        <li><a href="about-us.html">ABOUT US</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
